fix Prev-Next alignment; Answer text line-height; minor improvements (#319)

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -160,6 +160,7 @@
   --mt-footer-font-size-footer-m: var(--mt-font-size-90);
   --mt-footer-font-size-footer-l: var(--mt-font-size-100);
   --mt-prev-next-button-font-size: var(--mt-font-size-80);
+  --mt-prev-next-header-font-size: var(--mt-font-size-125);
   --mt-tab-navigation-font-size: var(--mt-font-size-90);
   --mt-callout-font-size-desktop: var(--mt-font-size-250);
   --mt-callout-font-size-mobile: var(--mt-font-size-200);
@@ -758,7 +759,7 @@ main .section.our-history .year h3 {
   color: var(--mt-background-color-primary);
 }
 
-.section.arc-after-section p { 
+.section.arc-after-section p {
   text-align: left;
 }
 
